Frontend/src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  min-height: 100%;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #FFD52E;
  text-decoration: inherit;
}
a:hover {
  color: #FFD52E;
}

html {
  background-color: #242424;
  height: auto;
  -webkit-overflow-scrolling: touch;
  overscroll-behavior-y: contain;
}

body {
  height: 100%;
  overflow: auto;
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  background-color: #242424;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  color: #FFD52E;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #FFD52E;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: dark) {
  :root {
    color: #f9f9f9;
    background-color: #242424;
  }
  a:hover {
    color: #FFD52E;
  }
  button {
    background-color: #242424;
  }
}

span {
  color: #242424;
}

@supports (-webkit-touch-callout: none) {
  html, body {
    position: relative;
    height: auto !important;
    overflow-y: auto !important;
    -webkit-overflow-scrolling: touch !important;
  }
}

